# gbot

./: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  changelog.md  deploy.sh  fetch-data.sh  gbot.code-workspace  gbot.sh  plan.md  plan2.md  plan3.md  prepareServer.sh  run.sh
.github/agents/: session-analyzer.md
config/: default.toml
docs/: analysis-log.md  changelog.md  deployment.md  evos.md
research/: macro_signal_analysis.py  signal_analysis.py
research/scripts/: analyze_obi_levels.py
scripts/: analyze_dry_run.py
src/: lib.rs  main.rs
src/backtest/: mod.rs  replay_engine.rs  runner.rs  sim_book.rs  sim_execution.rs
src/config/: coins.rs  mod.rs  settings.rs
src/exchange/: mod.rs  rate_limiter.rs  rest_client.rs  signer.rs  ws_client.rs
src/execution/: mod.rs  order_manager.rs  position_manager.rs
src/features/: book_features.rs  engine.rs  flow_features.rs  mod.rs
src/market_data/: book.rs  book_manager.rs  mod.rs  recorder.rs
src/observability/: dashboard.rs  metrics.rs  mod.rs
src/persistence/: journal.rs  mod.rs  parquet_writer.rs  signal_recorder.rs
src/portfolio/: state.rs
src/regime/: engine.rs
src/risk/: manager.rs
src/strategy/: mfdp.rs  mod.rs  pullback.rs  signal.rs
static/: index.html
static/css/: styles.css
static/js/: app.js
