[package]
name = "gbot"
version = "0.1.0"
edition = "2021"
description = "Microstructure-first directional pullback trading bot for Hyperliquid"

[dependencies]
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util     = "0.3"
reqwest          = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
rust_decimal     = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
thiserror        = "2"
anyhow           = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender  = "0.2"
uuid             = { version = "1", features = ["v4"] }
dashmap          = "6"
config           = "0.14"
chrono           = { version = "0.4", features = ["serde"] }
url              = "2"
hex              = "0.4"
sha3             = "0.10"
tiny-keccak      = { version = "2", features = ["keccak"] }
k256             = { version = "0.13", features = ["ecdsa"] }
rand             = "0.8"
axum             = { version = "0.7", features = ["ws"] }
axum-extra       = { version = "0.9", features = ["typed-header"] }
tower-http       = { version = "0.5", features = ["cors", "fs"] }
tokio-stream     = "0.1"
prometheus       = "0.13"
arrow            = { version = "53", default-features = false }
parquet          = { version = "53", default-features = false, features = ["arrow"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
